; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/common/extr_saa7146_video.c_vidioc_qbuf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/common/extr_saa7146_video.c_vidioc_qbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_buffer = type { i64 }
%struct.saa7146_fh = type { i32, i32 }

@V4L2_BUF_TYPE_VIDEO_CAPTURE = common dso_local global i64 0, align 8
@V4L2_BUF_TYPE_VBI_CAPTURE = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_buffer*)* @vidioc_qbuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_qbuf(%struct.file* %0, i8* %1, %struct.v4l2_buffer* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.v4l2_buffer*, align 8
  %8 = alloca %struct.saa7146_fh*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.v4l2_buffer* %2, %struct.v4l2_buffer** %7, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.saa7146_fh*
  store %struct.saa7146_fh* %10, %struct.saa7146_fh** %8, align 8
  %11 = load %struct.v4l2_buffer*, %struct.v4l2_buffer** %7, align 8
  %12 = getelementptr inbounds %struct.v4l2_buffer, %struct.v4l2_buffer* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @V4L2_BUF_TYPE_VIDEO_CAPTURE, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %3
  %17 = load %struct.saa7146_fh*, %struct.saa7146_fh** %8, align 8
  %18 = getelementptr inbounds %struct.saa7146_fh, %struct.saa7146_fh* %17, i32 0, i32 1
  %19 = load %struct.v4l2_buffer*, %struct.v4l2_buffer** %7, align 8
  %20 = call i32 @videobuf_qbuf(i32* %18, %struct.v4l2_buffer* %19)
  store i32 %20, i32* %4, align 4
  br label %35

21:                                               ; preds = %3
  %22 = load %struct.v4l2_buffer*, %struct.v4l2_buffer** %7, align 8
  %23 = getelementptr inbounds %struct.v4l2_buffer, %struct.v4l2_buffer* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @V4L2_BUF_TYPE_VBI_CAPTURE, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %32

27:                                               ; preds = %21
  %28 = load %struct.saa7146_fh*, %struct.saa7146_fh** %8, align 8
  %29 = getelementptr inbounds %struct.saa7146_fh, %struct.saa7146_fh* %28, i32 0, i32 0
  %30 = load %struct.v4l2_buffer*, %struct.v4l2_buffer** %7, align 8
  %31 = call i32 @videobuf_qbuf(i32* %29, %struct.v4l2_buffer* %30)
  store i32 %31, i32* %4, align 4
  br label %35

32:                                               ; preds = %21
  %33 = load i32, i32* @EINVAL, align 4
  %34 = sub nsw i32 0, %33
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %32, %27, %16
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @videobuf_qbuf(i32*, %struct.v4l2_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
